--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,14 @@
 <h1 align=center>Full Javascript Computer Programming Course Summary By _____</h1>
 
 <h3>Instructions</h3>
-Change ecvery webpage so that it is different than the starting page<br>
-Eventually (after about a month) make this into a table with four columns: #, Link, Mobile, Done. Use preset checkboxes for mobile and Done. <br>
-Also eventually erase these instructions to show that you want this page marked. <br><br><br>
+Change every webpage so that it is different than the starting page<br>
+Look in the public folder and make changes to every file.<br>
+Basic grading:<br> 
+
+D: Not yet worked with that file<br>
+C: I got it working and made a few changes.<br>
+B: I have proved I understand it by making several working examples on the page and making sensible changes to the examples <br>
+A: I used my website and javascript skills to make everything on the page look really good.<br>
 
 
 
