--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,14 @@ C: I got it working and made a few changes.<br>
 B: I have proved I understand it by making several working examples on the page and making sensible changes to the examples <br>
 A: I used my website and javascript skills to make everything on the page look really good.<br>
 
+Note: This page would look much better as a table!<br>
 
 
 <ol>
-<li><a href="x01-web-basics/x01-web-basics.html">x01-web-basics</a><br>
-<li><a href="x01-web-basics/x01-tables-lists.html">x01-tables-lists</a><br>
-<li><a href="x01-web-basics/x01-forms.html">x01-forms</a><br>
+<li><a href="index.html">This title page</a>  <font color="red">Letter Grade:D, I have so far changed: Nothing!</font>
+<li><a href="x01-web-basics/x01-web-basics.html">x01-web-basics</a>  <font color="red">Letter Grade:D, I have so far changed: Nothing!</font>
+<li><a href="x01-web-basics/x01-tables-lists.html">x01-tables-lists</a>  <font color="red">Letter Grade:D, I have so far changed: Nothing!</font>
+<li><a href="x01-web-basics/x01-forms.html">x01-forms</a>  <font color="red">Letter Grade:D, I have so far changed: Nothing!</font>
 
 <li><a href="x03-javascript/x03-javascript-2D-array.html">x03-javascript-2D-array.html </a>   
 <li><a href="x03-javascript/x03-javascript-arrays.html">x03-javascript-arrays.html </a>   
